<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_connexion"
    tools:context=".activity.AddArticleActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/article_edit_object"
            style="@style/AuthentificationScreenWideEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="50dp"

            android:hint="@string/edit_article_name"
            android:inputType="text" />
        <EditText
            android:id="@+id/article_edit_content"
            style="@style/AuthentificationScreenWideEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="25dp"
            android:textSize="18sp"

            android:layout_below="@+id/article_edit_object"

            android:hint="@string/edit_article_content"
            android:scrollbars="vertical"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/add_image_article_background"
            style="@style/ConnexionScreenWideButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:background="@android:color/transparent"
            android:text="@string/import_picture"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/article_edit_content"
            android:onClick="onClickImportPictureFromGallery"/>

        <Button
            android:id="@+id/add_article_button"
            style="@style/ConnexionScreenWideButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"

            android:text="@string/add_button_label"
            android:layout_below="@+id/add_image_article_background"
            android:onClick="onClickAddArticle"/>

    </RelativeLayout>

</ScrollView>